--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
                         <div id="header-text-name">Hao Wang (王灏)</div>
                         <div id="header-text-status">
                             Ph.D. student <br />
-                            <a href="https://www.chalmers.se/en/departments/ims/research/production-systems/Pages/default.aspx">Division of Production Systems</a>,
-                            <a href="https://www.chalmers.se/en/departments/ims/Pages/default.aspx">Department of Industrial and Materials Science</a>
+                            <a href="https://www.chalmers.se/en/departments/ims/research/production-systems/">Division of Production Systems</a>,
+                            <a href="https://www.chalmers.se/en/departments/ims/">Department of Industrial and Materials Science</a>
                             <br />
-                            <a href="https://www.chalmers.se/en/Pages/default.aspx">Chalmers University of Technology</a>
+                            <a href="https://www.chalmers.se/en/">Chalmers University of Technology</a>
                             <br />
                         </div>
-                        <div id="header-text-email">haowang (at) chalmers (dot) se</div>
+                        <div id="header-text-email"><a href="malto:haowang@chalmers.se">haowang (at) chalmers (dot) se</a></div>
                         <div>
                             <br />
                             <a href="https://scholar.google.com/citations?user=hKFj_QwAAAAJ">Google Scholar</a> |
@@ -365,8 +365,8 @@
                                 Chalmers University of Technology
                                 <br />
                                 Supervisor:
-                                <a href="https://www.chalmers.se/en/staff/Pages/bjorn-johansson.aspx">Björn Johansson</a>,
-                                <a href="https://www.chalmers.se/en/staff/Pages/anders-skoogh.aspx">Anders Skoogh</a>
+                                <a href="https://www.chalmers.se/en/persons/job/">Björn Johansson</a>,
+                                <a href="https://www.chalmers.se/en/persons/skoand/">Anders Skoogh</a>
                             </div>
                         </div>
                         <div class="row vspace-top-news">
