--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                         <div class="row vspace-top-news">
                             <div class="col">
                                 <div class="paper-title">Battery Production Systems: State of the Art and Future Developments</div>
-                                <div class="paper-desc">IFIP APMS 2023</div>
+                                <div class="paper-desc">APMS 2023</div>
                                 <div class="paper-authors">Mélanie Despeisse, Björn Johansson, Jon Bokrantz, Greta Braun, Arpita Chari, Xiaoxia Chen, Qi Fang, Clarissa A. González Chávez, Anders Skoogh, Johan Stahre, Ninan Theradapuzha Mathew, Ebru Turanoglu Bekar, <b><u>Hao Wang</u></b>, Roland Örtengren</div>
                                 <div>
                                     <a href="https://link.springer.com/chapter/10.1007/978-3-031-43688-8_36">Paper</a>
@@ -358,7 +358,7 @@
                             </div> -->
                             <div class="col">
                                 <div class="paper-title">Deep Learning-Based Connector Detection for Robotized Assembly of Automotive Wire Harnesses</div>
-                                <div class="paper-desc">IEEE CASE 2023</div>
+                                <div class="paper-desc">CASE 2023</div>
                                 <div class="paper-authors"><b><u>Hao Wang</u></b>, Björn Johansson</div>
                                 <div>
                                     <a href="https://arxiv.org/abs/2309.13746">Preprint</a>
@@ -372,7 +372,7 @@
                             </div> -->
                             <div class="col">
                                 <div class="paper-title">Beyond 3DMM: Learning to Capture High-fidelity 3D Face Shape</div>
-                                <div class="paper-desc">IEEE T-PAMI (2022)</div>
+                                <div class="paper-desc">TPAMI (2022)</div>
                                 <div class="paper-authors">Xiangyu Zhu, Chang Yu, Di Huang, Zhen Lei, <b><u>Hao Wang</u></b>, Stan Z. Li</div>
                                 <div>
                                     <a href="https://ieeexplore.ieee.org/document/9748011">Paper</a>
@@ -386,7 +386,7 @@
                             </div> -->
                             <div class="col">
                                 <div class="paper-title">Face Forgery Detection by 3D Decomposition</div>
-                                <div class="paper-desc">IEEE/CVF CVPR 2021 (Oral)</div>
+                                <div class="paper-desc">CVPR 2021 (Oral)</div>
                                 <div class="paper-authors">Xiangyu Zhu*, <b><u>Hao Wang*</u></b>, Hongyan Fei, Zhen Lei, Stan Z. Li (*Equal contribution)</div>
                                 <div>
                                     <a href="https://openaccess.thecvf.com/content/CVPR2021/papers/Zhu_Face_Forgery_Detection_by_3D_Decomposition_CVPR_2021_paper.pdf">Paper</a> |
